gccida/g1/find_comparison_args
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/cse.c:3587:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  find_comparison_args( 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/cse.c:3588:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/cse.c:3591:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode1, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/cse.c:3592:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode2) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/cse.c:3606:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v19; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/cse.c:3624:24: error: use of undeclared identifier 'machine_mode'
v11 = safe_hash( v6, ( machine_mode)v8); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/cse.c:3625:33: error: use of undeclared identifier 'machine_mode'
v12 = lookup( v6, v11 & 0x1F, ( machine_mode)v8); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/cse.c:3647:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v17] == MODE_INT && mode_bitsize[v17] == 1 ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/cse.c:3653:20: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( code == GE && mode_class_0[v17] == MODE_INT && mode_bitsize[v17] == 1 ) 
                   ^~~~~~~~~~~~
                   mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_comparison_args/src/obj/cse.o] Error 1
